<resources>
    <string name="app_name">GitExcercise</string>
    <string name="title_login">Login Screen</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="button_text_login">Login</string>
    <string name="button_text_register">Register</string>
    <string name="title_registration">Registration</string>
    <string name="hint_enter_number">Enter Number</string>
    <string name="hint_create_password">Create Password</string>
    <string name="action_reset">Reset</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="action_forget_password">forget password?</string>
    <string name="title_profile_screen">Profile Screen</string>
    <string name="title_edit_profile">Edit Profile</string>
</resources>