<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="simform.gitexcercise.profile.RegistrationFragment">

        <TextView
            android:id="@+id/text_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_registration"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_number"
            android:inputType="number"
            android:layout_marginTop="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_registration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_create_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_create_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_number"
            app:layout_constraintStart_toStartOf="@id/edit_text_number"
            app:layout_constraintEnd_toEndOf="@id/edit_text_number" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_register"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_create_password"
            app:layout_constraintStart_toStartOf="@id/edit_text_create_password"
            app:layout_constraintEnd_toEndOf="@id/edit_text_create_password" />

        <Button
            android:id="@+id/button_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_login"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_register"
            app:layout_constraintStart_toStartOf="@id/button_register"
            app:layout_constraintEnd_toEndOf="@id/button_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>