<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onButtonClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="simform.gitexcercise.authentication.LoginFragment">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username"
            app:layout_constraintStart_toStartOf="@id/edit_text_username"
            app:layout_constraintEnd_toEndOf="@id/edit_text_username" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_login"
            android:onClick="@{(view)->onButtonClick.onClick(view)}"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password"
            app:layout_constraintStart_toStartOf="@id/edit_text_password"
            app:layout_constraintEnd_toEndOf="@id/edit_text_password" />

        <Button
            android:id="@+id/button_go_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_register"
            android:onClick="@{(view)->onButtonClick.onClick(view)}"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintStart_toStartOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="@id/button_login" />

        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_forget_password"
            android:textSize="18sp"
            android:onClick="@{(view)->onButtonClick.onClick(view)}"
            android:layout_margin="16dp"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>