<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="simform.gitexcercise.authentication.ForgetPasswordFragment">

        <TextView
            android:id="@+id/text_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_reset_password"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_reset_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_create_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username"
            app:layout_constraintStart_toStartOf="@id/edit_text_username"
            app:layout_constraintEnd_toEndOf="@id/edit_text_username" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_reset"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password"
            app:layout_constraintStart_toStartOf="@id/edit_text_password"
            app:layout_constraintEnd_toEndOf="@id/edit_text_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>